@@ -893,9 +893,10 @@ def cmd_sync_local2remote(args):
 		else:
 			# 'uri' from the last iteration is still valid at this point
 			cf = CloudFront(cfg)
-			result, inval_id = cf.InvalidateObjects(uri, uploaded_objects_list)
-			print result
-			output("Created invalidation request: %s" % inval_id)
+			result = cf.InvalidateObjects(uri, uploaded_objects_list)
+			if result['status'] == 201:
+				output("Created invalidation request for %d paths" % len(uploaded_objects_list)) 
+				output("Check progress with: s3cmd cfinvalinfo cf://%s/%s" % (result['dist_id'], result['request_id']))
 
 def cmd_sync(args):
 	if (len(args) < 2):
@@ -1328,6 +1329,8 @@ def get_commands_list():
 	{"cmd":"cfcreate", "label":"Create CloudFront distribution point", "param":"s3://BUCKET", "func":CfCmd.create, "argc":1},
 	{"cmd":"cfdelete", "label":"Delete CloudFront distribution point", "param":"cf://DIST_ID", "func":CfCmd.delete, "argc":1},
 	{"cmd":"cfmodify", "label":"Change CloudFront distribution point parameters", "param":"cf://DIST_ID", "func":CfCmd.modify, "argc":1},
+	#{"cmd":"cfinval", "label":"Invalidate CloudFront objects", "param":"s3://BUCKET/OBJECT [s3://BUCKET/OBJECT ...]", "func":CfCmd.invalidate, "argc":1},
+	{"cmd":"cfinvalinfo", "label":"Display CloudFront invalidation request(s) status", "param":"cf://DIST_ID[/INVAL_ID]", "func":CfCmd.invalinfo, "argc":1},
 	]
 
 def format_commands(progname, commands_list):
